2005-10-30 Niklas Knutsson  <nq@altern.org>

	* Finish documentation updates
	* Completion fixes

2005-10-29 Niklas Knutsson  <nq@altern.org>

	* Update parse status display of to unit expression and parse display in history
	* Save history type information to restore formatting

2005-10-28 Niklas Knutsson  <nq@altern.org>

	* More result drawing enhancements
	* Use option to reduce transformation when parsing and print formating for parse status
	* Update recalculation behaviour on mode change
	* Support for binary and other prefixes

2005-10-27 Niklas Knutsson  <nq@altern.org>

	* Update documentation
	* Scale result if it does not fit window height
	* Save confirmation with gtk-2.8
	* Improved parenthesis drawing

2005-10-26 Niklas Knutsson  <nq@altern.org>

	* A better solution (set size request for result display again) for resizing window when
	  keypad or history are shown/hidden.
	* Update Swedish translation
	* Reduce result display size on startup

2005-10-25 Niklas Knutsson  <nq@altern.org>

	* Hide value entry, exact button and names details in variable edit dialog in store mode
	* Focus name entry in variable edit dialog
	* Add unit selector to convert to unit dialog
	* Focus name entries
	* Use variables edit dialog also for storing matrix/vector results
	* Split edit data set and edit function dialogs in tabs

2005-10-24 Niklas Knutsson  <nq@altern.org>

	* Add accelerators Ctrl+K and Ctrl+H for keypad and history expanders respectively
	* Replace mod button with f(x) button

2005-10-23 Niklas Knutsson  <nq@altern.org>

	* Completion fixes
	* Option to disable completion
	* Make suffixes in completion list smaller
	* Disable completion for disabled object types (functions, variables and units)

2005-10-22 Niklas Knutsson  <nq@altern.org>

	* GUI polishing
	* Show alternative names in cursive style after default in completion list
	* Show title in completion list in cursive style
	* Completion for all names

2005-10-21 Niklas Knutsson  <nq@altern.org>