@@ -1,3 +1,11 @@
+2005-11-01 Niklas Knutsson  <nq@altern.org>
+
+	* History enhancements
+
+2005-10-31 Niklas Knutsson  <nq@altern.org>
+
+	* Polishing
+
 2005-10-30 Niklas Knutsson  <nq@altern.org>
 
 	* Finish documentation updates
